--- a/src/templates/__dev.html
+++ b/src/templates/__dev.html
@@ -1,34 +1,15 @@
-<div>
-    <div v-for="sr in sr_data" :key="sr.event_id">
+<div v-on:click="showState">
+    <p class="body-1 ml4">PDF-Gesamtauswertung: under construction</p>
+    <p class="caption ml4" v-text="readyforPDF + ' - ' + data_apps_array.length"></p>
 
-        <div v-if="!sr.calculation_found">
-            <optinomic-content-block :title="getTitle(sr)" :subtitle="getSubtitle(sr)" id="id_erfassungen">
-                <p class="overline">Auswertung / Interpretation</p>
-                <optinomic-clipboard-text :text="sr.calculation.resilienz_score.interpretation">
-                </optinomic-clipboard-text>
 
-                <optinomic-chart-profile style="border-top:1px solid #fafafa;border-bottom:1px solid #fafafa;"
-                    v-bind:options="JSON.stringify(options)" v-bind:scales="JSON.stringify(scales)"
-                    v-bind:ranges="JSON.stringify(ranges)" v-bind:scores="JSON.stringify(sr_full)">
-                </optinomic-chart-profile>
-            </optinomic-content-block>
+    <div class="d-flex flex-row justify-space-between align-center">
+        <div class="mx-auto body-2">
+            Erstelle PDF
         </div>
-        <div v-else>
-            <optinomic-content-block :title="formatDateCH(sr.date)" subtitle="Hinweis zur Messung vom" id="id_no_calculation">
-                <v-alert prominent text type="error">
-                    Calculation noch nicht berechnet.
-                </v-alert>
-            </optinomic-content-block>
+        <div v-for="app in data_apps_array">
+            <v-badge v-if="app.loaded" color="green" dot>
         </div>
-
     </div>
 
-    <optinomic-content-block :subtitle="sr_count_text" title="Datentabelle" id="id_data_table">
-        <optinomic-data-table :rows="data_table.rows"></optinomic-data-table>
-    </optinomic-content-block>
-
-    <optinomic-content-block title="Druckvorlage" subtitle="PDF" id="id_pdf" v-if="pdf_ready">
-        <optinomic-pdfmake :header-left="patient_secure" footer-left="Resilienz" header-right="Klinik Südhang"
-            document-title="Resilienz" :content="pdf_content" hide-logo></optinomic-pdfmake>
-    </optinomic-content-block>
 </div>
