--- a/src/templates/__dev.html
+++ b/src/templates/__dev.html
@@ -1,88 +1,32 @@
-<template>
-    <v-app id="top" style="background-color:#f8f8f8!important;">
-        <v-content class="mb-12">
-            <v-container class="mt-10 mb-12 pt-8 pb-12 pl-10 pr-8 elevation-1"
-                style="background-color:white!important;">
+<div v-on:click="showState">
 
-                <v-row>
-                    <v-col cols="12" sm="6">
-                        <img v-if="clinic_data" :src="clinic_data.clinic_logo" :alt="clinic_data.clinic_slogan"
-                            height="46">
-                        <v-skeleton-loader v-if="!clinic_data" height="46px" max-width="240px" type="image">
-                        </v-skeleton-loader>
-                    </v-col>
-                    <v-col cols="12" sm="6">
-                        <optinomic-toc></optinomic-toc>
-                    </v-col>
-                </v-row>
+    <div v-if="!pdf_finished">
 
-                <app-title :title="title" :subtitle="subtitle" class="mt-4"></app-title>
+        <div v-if="pdf_building" class="d-flex flex-row justify-space-between align-center mr-4">
+            <p v-text="pdf_status"></p>
 
-                <div v-if="loaded">
-                    <div v-if="could_have_data">
-                        <div v-if="sr.have_data">
-                            <optinomic-content-block title="Missings" subtitle="Datenhinweis" id="data_note"
-                                v-if="missing_data">
-                                <div v-for="r in sr.data">
-                                    <div v-if="r.all_found === false">
-                                        <v-alert dense outlined text type="error">
-                                            <p style="margin:0;padding:0">Bei der Messung vom <span
-                                                    v-html="formatDateCH(r.date)"></span> sind nicht alle Daten
-                                                vorhanden:
-                                            </p>
-                                            <p style="margin:0;padding:0" v-if="r.calculation_found === false">
-                                                - Calculation nicht gefunden / noch nicht berechnet!
-                                            </p>
-                                            <p style="margin:0;padding:0" v-if="r.event_found === false">
-                                                - Event <span v-html="r.event_id"></span> nicht gefunden.
-                                            </p>
-                                            <p style="margin:0;padding:0" v-if="r.patient_found === false">
-                                                - Patient <span v-html="r.patient_id"></span> nicht gefunden.
-                                            </p>
-                                            <p style="margin:0;padding:0" v-if="r.stay_found === false">
-                                                - Fall <span v-html="r.stay_id"></span> nicht gefunden.
-                                            </p>
-                                        </v-alert>
-                                    </div>
-                                </div>
-                            </optinomic-content-block>
-                            <slot></slot>
-                        </div>
-                        <div v-else>
-                            <optinomic-content-block subtitle="Hinweis" title="Keine Messdaten" id="in_no_data"
-                                show_in_toc="false">
-                                <v-alert prominent text type="error">
-                                    Es sind keine Messdaten vorhanden.
-                                </v-alert>
-                            </optinomic-content-block>
-                        </div>
-                    </div>
-                    <div v-else>
-                        <slot></slot>    
-                    </div>
-                </div>
-                <div v-else lass="mx-3 mt-3">
-                    <v-sheet class="px-3 pt-3 pb-3">
-                        <v-skeleton-loader class="mx-auto" type="card"></v-skeleton-loader>
-                    </v-sheet>
-                </div>
-                <!-- FOOTER -->
-                <div class="mt-12 pt-12 ml-4 mr-6">
-                    <v-row style="border-top: 1px solid #8b0042;">
-                        <v-col cols="12" sm="6" class="px-0">
-                            <p class="subtitle-1 font-italic font-weight-thin text-left" style="color:#8b0042"
-                                v-text="clinic_data.clinic_slogan" v-if="clinic_data"></p>
-                        </v-col>
-                        <v-col cols="12" sm="6" class="px-0">
-                            <v-btn class="ml-1" style="float:right;" icon x-small color="#8b0042"
-                                @click="$vuetify.goTo('#top')">
-                                <v-icon dark>mdi-arrow-up</v-icon>
-                            </v-btn>
-                            <p class="caption font-weight-light text-right" v-text="user_text"></p>
-                        </v-col>
-                    </v-row>
-                </div>
-            </v-container>
-        </v-content>
-    </v-app>
-</template>
+            <div v-for="index in this.pdf_create_count" :key="index" style="margin-top:-12px;">
+                <v-badge color="green" dot> </v-badge>
+            </div>
+            <div v-for="index in data_apps_array.length - this.pdf_create_count" :key="index" style="margin-top:-12px;">
+                <v-badge color="blue" dot> </v-badge>
+            </div>
+
+        </div>
+        <div v-else class="d-flex flex-row justify-space-between align-center mr-4">
+            <p v-text="pdf_status"></p>
+
+            <div v-for="app in data_apps_array" style="margin-top:-12px;">
+                <v-badge v-if="(app.init === true) && (app.loaded !== true)  && (app.pdf_created !== true)" color="grey"
+                    dot> </v-badge>
+                <v-badge v-if="(app.init === true) && (app.loaded === true)  && (app.pdf_created !== true)" color="blue"
+                    dot></v-badge>
+            </div>
+        </div>
+
+    </div>
+    <div v-else>
+        <optinomic-pdfmake :header-left="patient_secure" :footer-left="title" header-right="Klinik Südhang"
+            :document-title="title" :content="pdf_content" hide-logo></optinomic-pdfmake>
+    </div>
+</div>
