--- a/src/templates/__dev.html
+++ b/src/templates/__dev.html
@@ -1,109 +1,18 @@
-<template>
-    <v-app id="top" style="background-color:#f8f8f8!important;">
-        <v-content class="mb-12 pb-12">
-            <v-container class="mt-10 pt-8 pl-10 pr-8 elevation-1" style="background-color:white!important;">
+<div>
 
-                <v-row>
-                    <v-col cols="12" sm="6">
-                        <img v-if="clinic_data" :src="clinic_data.clinic_logo" :alt="clinic_data.clinic_slogan"
-                            height="46">
-                        <v-skeleton-loader v-if="!clinic_data" height="46px" max-width="240px" type="image">
-                        </v-skeleton-loader>
-                    </v-col>
-                    <v-col cols="12" sm="6">
-                        <optinomic-toc></optinomic-toc>
-                    </v-col>
-                </v-row>
+    <optinomic-content-block title="Druckvorlagen" subtitle="PDF" id="pdf_druckvorlagen">
+        <p v-text="pdf_ready"></p>
+        <p>Druckvorlagen</p>
+        <optinomic-pdfmake :header-left="patient_data.extras.full_name"
+            :footer-left="pdf_einladung_pa.title + ' :: ' + pdf_einladung_pa.name" header-right="Klinik Südhang"
+            document-title="pdf_einladung_pa.title + ' - ' + pdf_einladung_pa.name" :content="pdf_einladung_pa.content"
+            hide-logo>
+        </optinomic-pdfmake>
+        <optinomic-pdfmake :header-left="patient_data.extras.full_name"
+            :footer-left="pdf_notizblatt.title + ' :: ' + pdf_notizblatt.name" header-right="Klinik Südhang"
+            document-title="pdf_notizblatt.title + ' - ' + pdf_notizblatt.name" :content="pdf_notizblatt.content"
+            hide-logo>
+        </optinomic-pdfmake>
+    </optinomic-content-block>
 
-                <app-title :title="title" :subtitle="subtitle" class="mt-4"></app-title>
-
-                <div v-if="loaded">
-                    <div v-if="could_have_data">
-                        <div v-if="sr.have_data">
-                            <optinomic-content-block title="Missings" subtitle="Datenhinweis" id="data_note"
-                                v-if="missing_data">
-                                <div v-for="r in sr.data">
-                                    <div v-if="r.all_found === false">
-                                        <v-alert dense outlined text type="error">
-                                            <p style="margin:0;padding:0">Bei der Messung vom <span
-                                                    v-html="formatDateCH(r.date)"></span> sind nicht alle Daten
-                                                vorhanden:
-                                            </p>
-                                            <p style="margin:0;padding:0" v-if="r.calculation_found === false">
-                                                - Calculation nicht gefunden / noch nicht berechnet!
-                                            </p>
-                                            <p style="margin:0;padding:0" v-if="r.event_found === false">
-                                                - Event <span v-html="r.event_id"></span> nicht gefunden.
-                                            </p>
-                                            <p style="margin:0;padding:0" v-if="r.patient_found === false">
-                                                - Patient <span v-html="r.patient_id"></span> nicht gefunden.
-                                            </p>
-                                            <p style="margin:0;padding:0" v-if="r.stay_found === false">
-                                                - Fall <span v-html="r.stay_id"></span> nicht gefunden.
-                                            </p>
-                                        </v-alert>
-                                    </div>
-                                </div>
-                            </optinomic-content-block>
-                            <slot></slot>
-                        </div>
-                        <div v-else>
-                            <optinomic-content-block subtitle="Hinweis" title="Keine Messdaten" id="in_no_data"
-                                show_in_toc="false">
-                                <v-alert prominent text type="error">
-                                    Es sind keine Messdaten vorhanden.
-                                </v-alert>
-                            </optinomic-content-block>
-                        </div>
-                    </div>
-                    <div v-else>
-                        <slot></slot>
-                    </div>
-                </div>
-                <div v-else lass="mx-3 mt-3">
-                    <v-sheet class="px-3 pt-3 pb-3">
-                        <v-skeleton-loader class="mx-auto" type="card"></v-skeleton-loader>
-                    </v-sheet>
-                </div>
-
-                <!-- FOOTER -->
-                <div class="mt-12 pt-12 ml-4 mr-6">
-                    <v-row style="border-top: 1px solid #8b0042;">
-                        <v-col cols="12" sm="6" class="px-0">
-                            <p class="subtitle-1 font-italic font-weight-thin text-left" style="color:#8b0042"
-                                v-text="clinic_data.clinic_slogan" v-if="clinic_data"></p>
-                        </v-col>
-                        <v-col cols="12" sm="6" class="px-0">
-                            <v-btn class="ml-1" style="float:right;" icon x-small color="#8b0042"
-                                @click="$vuetify.goTo('#top')">
-                                <v-icon dark>mdi-arrow-up</v-icon>
-                            </v-btn>
-                            <p class="caption font-weight-light text-right" v-text="user_text"></p>
-                        </v-col>
-                    </v-row>
-                </div>
-            </v-container>
-            <v-content class="mt-12 mx-12">
-                <!-- ADMIN - Tools -->
-                <div v-if="isAdmin">
-                    <p class="overline" style="color:#8b0042">Admin-Tools</p>
-                    <v-simple-table dense>
-                        <tbody>
-                            <tr>
-                                <td>State (check console)</td>
-                                <td>
-                                    <v-btn text small @click="logState(true)">
-                                        beautify
-                                    </v-btn>
-                                    <v-btn text small color="#8b0042" @click="logState(false)">
-                                        log
-                                    </v-btn>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </v-simple-table>
-                </div>
-            </v-content>
-        </v-content>
-    </v-app>
-</template>
+</div>
